--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     machine:
       image: ubuntu-2004:202010-01
+    working_directory: ~/jws-server
     steps:
       - run:
           name: Build a Docker image.
