--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'jacoco'
-    id 'com.github.spotbugs' version '4.6.0'
+    id 'com.github.spotbugs' version '4.7.0'
     id 'pmd'
     id 'checkstyle'
     id 'maven-publish'
@@ -21,6 +21,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testCompile 'org.hamcrest:hamcrest:2.2'
+    testCompile 'org.mockito:mockito-core:3.8.0'
     compile 'net.jcip:jcip-annotations:1.0'
     compile 'com.github.spotbugs:spotbugs-annotations:4.2.0'
 }
@@ -63,7 +64,7 @@ jacocoTestCoverageVerification {
                 enabled = true
                 counter = 'LINE'
                 value = 'COVEREDRATIO'
-                minimum = 0.89000
+                minimum = 0.90000
             }
             limit {
                 enabled = true
@@ -92,9 +93,10 @@ check.dependsOn jacocoTestCoverageVerification
 check.dependsOn jacocoTestReport
 
 spotbugs {
-    toolVersion = '4.2.0'
+    toolVersion = '4.2.2'
     ignoreFailures = false
     effort = 'max'
+    omitVisitors = ['FormatStringChecker']
 }
 spotbugsMain {
     reports {
