--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,21 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Build a Docker image.
-          command: docker build -t=ci .
+          name: Run the Docker container using the openjdk15 image. The build folder is shared so we can upload the coverage report.
+          command: docker run --name ci -v $(pwd)/build:/usr/src/myapp/build -it -d openjdk:15.0.2-oraclelinux7 /bin/bash
       - run:
-          name: Run the Docker container. The build folder is shared so we can upload the coverage report.
-          command: docker container run -v $(pwd)/build:/usr/src/myapp/build ci
+          name: Copy the source code into the container.
+          command: docker cp . ci:/usr/src/myapp
       - run:
+          name: Run the build command.
+          command: docker exec -w /usr/src/myapp ci ./gradlew build
+      - run:
+          name: Stop the container.
+          command: docker stop ci
+      - run:
+          name: Remove the container.
+          command: docker rm ci
+      - run:
+          name: Upload the coverage report to codecov.io.
           command: bash <(curl -s https://codecov.io/bash)
           when: on_success
