--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'jacoco'
-    id 'com.github.spotbugs' version '4.7.0'
+    id 'com.github.spotbugs' version '4.7.2'
     id 'pmd'
     id 'checkstyle'
     id 'maven-publish'
@@ -18,12 +18,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    testCompile 'org.hamcrest:hamcrest:2.2'
-    testCompile 'org.mockito:mockito-core:3.8.0'
-    compile 'net.jcip:jcip-annotations:1.0'
-    compile 'com.github.spotbugs:spotbugs-annotations:4.2.0'
+    implementation 'net.jcip:jcip-annotations:1.0'
+    implementation 'com.github.spotbugs:spotbugs-annotations:4.3.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation 'org.mockito:mockito-core:3.11.2'
 }
 
 test {
@@ -36,7 +36,7 @@ test {
 }
 
 jacoco {
-    toolVersion = '0.8.6'
+    toolVersion = '0.8.7'
 }
 
 jacocoTestCoverageVerification {
@@ -46,31 +46,31 @@ jacocoTestCoverageVerification {
                 enabled = true
                 counter = 'INSTRUCTION'
                 value = 'COVEREDRATIO'
-                minimum = 0.90000
+                minimum = 0.80445
             }
             limit {
                 enabled = true
                 counter = 'BRANCH'
                 value = 'COVEREDRATIO'
-                minimum = 0.90000
+                minimum = 0.89090
             }
             limit {
                 enabled = true
                 counter = 'COMPLEXITY'
                 value = 'COVEREDRATIO'
-                minimum = 0.90000
+                minimum = 0.82954
             }
             limit {
                 enabled = true
                 counter = 'LINE'
                 value = 'COVEREDRATIO'
-                minimum = 0.90000
+                minimum = 0.89563
             }
             limit {
                 enabled = true
                 counter = 'METHOD'
                 value = 'COVEREDRATIO'
-                minimum = 0.90000
+                minimum = 0.83732
             }
             limit {
                 enabled = true
@@ -84,8 +84,8 @@ jacocoTestCoverageVerification {
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = true
     }
 }
 
@@ -93,15 +93,15 @@ check.dependsOn jacocoTestCoverageVerification
 check.dependsOn jacocoTestReport
 
 spotbugs {
-    toolVersion = '4.2.2'
+    toolVersion = '4.3.0'
     ignoreFailures = false
     effort = 'max'
-    omitVisitors = ['FormatStringChecker']
+    excludeFilter = file('config/spotbugs/exclude.xml')
 }
 spotbugsMain {
     reports {
         html {
-            enabled = true
+            required = true
             destination = file("$buildDir/reports/spotbugs/main/spotbugs.html")
             stylesheet = 'fancy-hist.xsl'
         }
@@ -110,7 +110,7 @@ spotbugsMain {
 spotbugsTest {
     reports {
         html {
-            enabled = true
+            required = true
             destination = file("$buildDir/reports/spotbugs/test/spotbugs.html")
             stylesheet = 'fancy-hist.xsl'
         }
@@ -118,20 +118,20 @@ spotbugsTest {
 }
 
 pmd {
-    toolVersion = '6.30.0'
+    toolVersion = '6.31.0'
     ignoreFailures = false
     ruleSetFiles = files('config/pmd/ruleSet.xml')
     ruleSets = []
 }
 tasks.withType(Pmd) {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = true
     }
 }
 
 checkstyle {
-    toolVersion '8.38'
+    toolVersion '8.41'
     ignoreFailures = false
     configFile = file('config/checkstyle/checkstyle.xml')
     configProperties = [
@@ -141,8 +141,8 @@ checkstyle {
 }
 tasks.withType(Checkstyle) {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = true
     }
 }
 
